--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@
     padding: 1rem;            /* Add a little padding on mobile */
     line-height: 1.4;
     max-width: 500px;
+    transform: translateX(100px);
   }
 
   aside {
@@ -571,10 +572,6 @@
      - Small screen optimizations
      - Touch-friendly interaction areas
      */
-
-  @media (max-width: 968px) and (min-width: 768px) {
-    main { margin-left: 250px;}
-  }
   
   @media (max-width: 768px) {
     body { height: 100%; }
@@ -582,6 +579,7 @@
       padding: 0.75rem;
       margin-left: auto;
       margin-bottom: 150px;
+      transform: translateX(0);
     }
 
     aside {
