--- a/style.css
+++ b/style.css
@@ -47,20 +47,29 @@
 
   .aside-bar {
     position: sticky;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    /* align-content: center; */
-    align-items: center;
-    flex-wrap: wrap;
-    width: 200px;
-    height: 100vh;
+    background-color: white;
+    top: 0; bottom: 0; left: 0;
+    width: 200px; height: 100vh;
     overflow-y: auto;
+    overflow-y: visible;
     background: #fff;
     padding: 1rem;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     z-index: 100;
+  }
+
+  .aside-bar-content {
+    background: white;
+    display: grid;
+    grid-template-rows: 55px 50px 1fr 10px;
+    grid-template-columns: 5px 1fr 110px 5px;
+    grid-template-areas:
+      '. hp hp .'
+      '. stats manual .'
+      '. stats rolllog .'
+      '. . . .';
+    position: relative;
+    z-index: 11;
   }
 
   h1 {
@@ -127,9 +136,10 @@
 
   .manual-toggle {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    margin-top: 1rem;
+    margin: 0;
+    grid-area: manual;
     width: 100%;
   }
 
@@ -382,9 +392,10 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    align-self: flex-start;
+    align-self: flex-end;
     gap: 0.5rem;
     margin: 0;
+    grid-area: stats;
 
     &.inactive {
       .stat-die {
@@ -392,6 +403,72 @@
         opacity: 0.5;
       }
     }
+  }
+
+  /* Roll Logs layout */
+  #roll-log {
+    grid-area: rolllog;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+    pointer-events: initial;
+
+    &.inactive {
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+  }
+
+  #rollLog {font-weight: bold;}
+
+  #logControls {
+    display: inline-flex;
+    justify-content: flex-end;
+    column-gap: 0.75rem;
+  }
+
+  #logClose, #logOpen {
+    width: 20px;
+    height: 20px;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    padding: 2px;
+    background: none;
+    border: 1px solid #222;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  #logClose {
+    display: none;
+  }
+
+  #logTextContainer {
+    position: absolute;
+    height: fit-content;
+    width: calc(100% - 20px);
+    background-color: white;
+    border: 1px solid rgba(51, 51, 51, 0.5);
+    border-bottom: none;
+    border-radius: 4px 4px 0 0;
+    color: #222;
+    padding: 1rem;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(0);
+    transition: all 0.3s ease;
+    bottom: 60px; right: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+  }
+
+  #logTextContainer.show {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(-100%);
+    transition: all 0.3s ease;
   }
 
 /* ──────────────────────────────────────────────────────────────────────────────
@@ -577,7 +654,7 @@
   }
   .stat-die {
     flex: 1 1 30%;          /* Attempt three per row on mid-size, shrink as needed */
-    min-width: 135px;       /* Will wrap if narrower than this */
+    min-width: 155px;       /* Will wrap if narrower than this */
     max-width: 180px;       /* Don’t let them grow too wide */
     text-align: center;
     background-color: var(--die-bg);
@@ -700,18 +777,22 @@
   }
 
   #hpSection {
-    border-bottom: 1px solid #ccc;
     display: flex; gap: 0.5rem;
     justify-content: center;
     align-items: anchor-center;
-    width: 100vw; height: 80px;
-    padding: 0; margin: auto -0.5rem;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    grid-area: hp;
   }
 
   .hp-container {
     display: flex;
     gap: 0.25rem;
     justify-content: center;
+  }
+  .shield-toggle {
+    margin-left: auto;
   }
 
   .hp-slot {
@@ -730,10 +811,20 @@
     position: absolute;
     top: 0; left: 50%;
     transform: translateX(-50%);
-    width: 80%; height: 0.5rem;
-    background: linear-gradient(to right, rgba(0 123 255 / 0.6), rgba(0 123 255 / 0.3));
+    width: 99%; height: 0.75rem;
+    background: linear-gradient(to right, 
+      rgba(0 123 255 / 0.1),
+      rgba(0 123 255 / 0.25),
+      rgba(0 123 255 / 0.33),
+      rgba(0 123 255 / 0.75),
+      rgba(0 123 255 / 0.33),
+      rgba(0 123 255 / 0.25),
+      rgba(0 123 255 / 0.1)
+    );
+    background-size: 200% 100%;
     border-radius: 1rem;
     pointer-events: none;
+    animation: shieldFlow 3s linear infinite;
   }
 
 
@@ -747,6 +838,18 @@
   
   @keyframes popupEnter {
     to { transform: translateY(0); }
+  }
+
+  @keyframes shieldFlow {
+    0% {
+      background-position: -10% 0;
+    }
+    50% {
+      background-position: 100% 0;
+    }
+    100% {
+      background-position: -10% 0;
+    }
   }
 
   @keyframes pulseD20 {
@@ -773,24 +876,68 @@
 
   @media (min-width: 768px) {
     body {display: flex;}
+    .aside-bar-content {
+      height: 100%;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr auto auto 1fr auto auto 10px;
+      grid-template-areas:
+        "."
+        "manual"
+        "stats"
+        "."
+        "hp"
+        "rolllog"
+        ".";
+    }
     #hpSection {
-      order: 1;
+      position: relative;
       width: 200px; height: min-content;
       border-top: 1px solid #ccc;
       border-bottom: none;
       flex-direction: column;
       align-self: flex-end;
-      margin: 1rem -1rem 0;
+      margin: 1rem -1rem;
       padding-top: 1rem;
+    }
+    .shield-toggle {
+      margin: auto;
     }
     .manual-toggle {
       max-width: 200px;
       justify-content: start;
       align-self: flex-end;
     }
+    #logTextContainer {
+      width: 250px;
+      left: 1%; right: 1%;
+      transform: translate(200px, 100%);
+      bottom: 0;
+      height: 0;
+      overflow-y: auto;
+    }
+    #logTextContainer.show {
+      transform: translate(200px, 0);
+      height: auto;
+      max-height: 98vh;
+    }
   }
   
   @media (max-width: 767px) {
+    #roll-log {
+      /* bottom: 10px;
+      right: 10px; */
+    }
+  
+    #logTextContainer {
+      left: 10px;
+      right: 10px;
+      width: auto;
+      top: 0;
+      max-height: calc(100vh - 400px);
+      overflow-y: auto;
+
+    }
+
     main {
       padding: 0.75rem;
       margin-left: auto;
@@ -800,13 +947,14 @@
     .aside-bar {
       height: fit-content;
       width: 100vw;
-      padding: 0.5rem 0.5rem 1rem;
+      padding: 0;
     }
 
     #stats {
       gap: 0.25rem;
       flex-direction: row;
       flex-wrap: wrap;
+      justify-content: flex-start;
     }
   
     .title {
@@ -841,8 +989,9 @@
     }
 
     .stat-die {
-      flex: 1 1 45%;
-      padding: 0.6rem 0.75rem;
+      min-width: 120px;
+      flex: 1 1 40%;
+      padding: 0.5rem 0.25rem;
       font-size: 0.95rem;
       border-radius: 4px;
     }
@@ -897,6 +1046,7 @@
   @media (max-width: 600px) {
     .stat-die-wrapper {
       max-width: min-content;
+      margin: 0;
     }
   }
 
